<resources>
    <string name="app_name">Registration Form</string>
    <string name="button_preview">Preview</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="text_view_registration_form">Registration Form</string>
    <string name="button_submit">Submit</string>
</resources>